terraform-aws/modules/vpc/main.tf
resource "aws_vpc" "main"{
    cidr_block = var.vpc_cidr
    tags = {
        name = "VPC-Main"
    }
}
resource "aws_subnet" "public"{
    vpc_id = aws_vpc.main.id
    cidr_block = var.public_subnet_cidr
    map_public_ip_on_launch = true
    tags = {
        name = "public-subnet"
        }
}
resource "aws_subnet" "private"{
    vpc_id = aws_vpc.main.id
    cidr_block = var.private_subnet_cidr
    tags = {
        name = "private subnet"
        }
}
resource "aws_internet_gateway" "igw"{
    vpc_id = aws_vpc.main.id
}
resource "aws_route_table" "public_rt"{
    vpc_id = aws_vpc.main.id
}
resource "aws_route" "public_internet"{
    route_table_id = aws_route_table.public_rt.id
    destination_cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
}
resource "aws_route_table_association" "public_assoc"{
    subnet_id = aws_subnet.public.id
    route_table_id = aws_route_table.public_rt.id
}
resource "aws_eip" "nat_eip" {}

resource "aws_nat_gateway" "nat"{
    allocation_id = aws_eip.nat_eip.id
    subnet_id = aws_subnet.public.id
}
resource "aws_route_table" "private_rt"{
    vpc_id = aws_vpc.main.id
}
resource "aws_route" "private_internet"{
    route_table_id = aws_route_table.private_rt.id
    destination_cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
}
resource "aws_route_table_association" "private_assoc"{
    subnet_id = aws_subnet.private.id
    route_table_id = aws_route_table.private_rt.id
}
